chore: documenting POST operation of api
