# docs/openapi/swagger.json
@@ -37,6 +37,71 @@
                     }
                 }
             }
+        },
+        "/students": {
+            "post": {
+                "description": "Allows you to create a student after validating duplicate names.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "students"
+                ],
+                "summary": "Allows you to create a student.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "To identify the tenant",
+                        "name": "x-tenant",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "To identify the request",
+                        "name": "x-cid",
+                        "in": "header"
+                    },
+                    {
+                        "description": "To create a student",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dtos.StudentCreateInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.Result"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.Result"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.Result"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.Result"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -46,6 +111,18 @@
                 "data": {},
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "dtos.StudentCreateInput": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string",
+                    "maxLength": 200
                 }
             }
         }
